Make sure executing of adb works on all OSs.
Also, close the blank TightVNC window if anything goes wrong
during the cloud device starting up.

Change-Id: Id98bfba7fc884224804b1ab4828f86e53ee53711